# fastapi-cms

./: main.py  pyproject.toml
api/: users.py
