[tool.poetry]
name = "fastapi-api-faraday-academy"
version = "0.1.0"
description = ""
authors = ["ananttrivedi0709 <theananttrivedi@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_api_faraday_academy"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.0"
fastapi = "^0.94.1"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
